# IndexLab

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  routes_eval_pages.py
app/api/: analytics.py  answerless_search.py  chunk_preview.py  config.py  download.py  eval_api.py  eval_old.py  files.py  indexes.py  sources.py  sse.py  versions.py
app/core/: config.py  logging.py  sse.py
app/ingest/: chunker.py  embedder.py  hybrid.py  indexer.py  normalize.py  pipeline.py  reader.py  schema.py
app/ingest/backends/: base.py  faiss_flat.py  faiss_ivf.py  loader.py
app/models/: db.py
app/ui/templates/: analytics.html  base.html  eval-compare.html  eval.html  index.html  preview.html  search.html  sources.html
data/: app.sqlite
test_data/: gold_nimbus.csv  product_spec_v1.csv  product_spec_v2.csv
